♻️ (API): more generic field distinct queries
